block: add test of direct io offsets
Tests various direct IO memory and length alignments against the
device's queue limits reported from sysfs.

Signed-off-by: Keith Busch <kbusch@kernel.org>
Reviewed-by: Chaitanya Kulkarni <kch@nvidia.com>
[Shin'ichiro: capped buf_size with device size in init_buffers()]
[Shin'ichiro: added license and copyright in block/042 per Link below]
Link: https://lore.kernel.org/linux-block/aSXci0u7c9Ppnjbd@kbusch-mbp/
Signed-off-by: Shin'ichiro Kawasaki <shinichiro.kawasaki@wdc.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,6 +9,7 @@ HAVE_C_MACRO = $(shell if echo "$(H)include <$(1)>" |	\
 		then echo 1;else echo 0; fi)
 
 C_TARGETS := \
+	dio-offsets \
 	loblksize \
 	loop_change_fd \
 	loop_get_status_null \
