nvme/067: test io_uring pass through for NVMe admin queue
Simple test to exercise the nvme admin commands usage with
io uring passthrough interfaces. The motivation for the test
is to extend the kernel code coverage for NVMe admin commands
via io_uring passthrough.

Signed-off-by: Swarna Prabhu <s.prabhu@samsung.com>
[Shin'ichiro: fixed program name and space indent, declared local vars]
Signed-off-by: Shin'ichiro Kawasaki <shinichiro.kawasaki@wdc.com>

--- a/src/Makefile
+++ b/src/Makefile
@@ -23,7 +23,8 @@ C_TARGETS := \
 	zbdioctl
 
 C_URING_TARGETS := miniublk \
-		metadata
+		metadata \
+		nvme-passthru-admin-uring
 
 HAVE_LIBURING := $(call HAVE_C_MACRO,liburing.h,IORING_OP_URING_CMD)
 HAVE_UBLK_HEADER := $(call HAVE_C_HEADER,linux/ublk_cmd.h,1)
